1769497, fixed duplicate-headings sugestions. (#3149)

--- a/docs/code-quality/c26130.md
+++ b/docs/code-quality/c26130.md
@@ -12,7 +12,7 @@ ms.assetid: 535e2356-bc84-4549-983d-7d29aee2249c
 
 Warning C26130 is issued when the analyzer detects a potential race condition but infers that the function is likely to be run in a single threaded mode, for example, when the function is in the initialization stage based on certain heuristics.
 
-## Example
+## Examples
 
 In the following example, warning C26130 is generated because a `_Guarded_by_` member is being modified without a lock.
 
@@ -29,8 +29,6 @@ void Init(DATA* p)
 }
 ```
 
-## Example
-
 If the previous code is guaranteed to be operated in a single threaded mode, annotate the function by using `_No_competing_thread_`, as shown in the following example.
 
 ```cpp
@@ -45,8 +43,6 @@ _No_competing_thread_ void Init(DATA* p)
     p->data = 0; // Warning C26130 will be resolved
 }
 ```
-
-## Example
 
 Alternatively, you can annotate a code fragment by using `_No_competing_thread_begin_` and `_No_competing_thread_end_`, as follows.
 
