--- a/docs/code-quality/c26138.md
+++ b/docs/code-quality/c26138.md
@@ -13,7 +13,7 @@ ms.author: sunnych
 
 Warning C26138 warns when a coroutine is suspended while holding a lock. In general, we can't know how long will a coroutine remain in the suspended state so this pattern may result in longer critical sections than expected.
 
-## Example
+## Examples
 
 The following code will generate C26138.
 
@@ -43,8 +43,6 @@ generator<int> mutex_acquiring_generator_report_once() {
   global_m.unlock();
 }
 ```
-
-## Example
 
 The following code will correct these warnings.
 
