--- a/docs/code-quality/c26160.md
+++ b/docs/code-quality/c26160.md
@@ -12,7 +12,7 @@ ms.assetid: e6518687-36b4-4eae-a732-758881638295
 
 Warning C26160 resembles warning [C26110](../code-quality/c26110.md) except that the confidence level is lower. For example, the function may contain annotation errors.
 
-## Example
+## Examples
 
 The following code generates warning C26160.
 
@@ -45,8 +45,6 @@ struct Account
 
 };
 ```
-
-## Example
 
 The following code shows a solution to the previous example.
 
