--- a/docs/code-quality/c26165.md
+++ b/docs/code-quality/c26165.md
@@ -12,7 +12,7 @@ ms.assetid: a1d89bd6-08f3-4215-8a0c-b8ecfeb0cffc
 
 Warning C26165 resembles warning [C26115](../code-quality/c26115.md) except that the confidence level is lower. For example, the function may contain annotation errors.
 
-## Example
+## Examples
 
 The following code generates warning C26165.
 
@@ -41,8 +41,6 @@ void testLockLevelledStruct(LockLevelledStruct* s) // Warning C26165
     LeaveCriticalSection(&s->a);
 }
 ```
-
-## Example
 
 To correct this warning, change the previous example to the following.
 
