--- a/docs/code-quality/c26167.md
+++ b/docs/code-quality/c26167.md
@@ -12,7 +12,7 @@ ms.assetid: 5a3d767f-31fa-45e0-8c9b-1aa776acaa45
 
 Warning C26167 resembles warning [C26117](../code-quality/c26117.md) except that the confidence level is lower. For example, the function may contain annotation errors.
 
-## Example
+## Examples
 
 The following code will generate C26167, as well as C26110.
 
@@ -30,8 +30,6 @@ void ReleaseUnheldLock(DATA* p) { // Warning C26167
     Leave(p); // Warning C26110
 }
 ```
-
-## Example
 
 The following code will correct these warnings.
 
