--- a/docs/code-quality/c26415.md
+++ b/docs/code-quality/c26415.md
@@ -30,7 +30,7 @@ Interpretation of the operations that can affect the lifetime of contained objec
 - Copy or move constructors or assignment operators
 - Non-constant functions
 
-## Example
+## Examples
 
 Cumbersome lifetime management.
 
@@ -54,8 +54,6 @@ void pass_message(const message_info &info)
         m.release();
 }
 ```
-
-## Example
 
 Cumbersome lifetime management - reworked.
 
