--- a/docs/code-quality/c26416.md
+++ b/docs/code-quality/c26416.md
@@ -25,7 +25,7 @@ Passing a shared pointer by rvalue reference is usually unnecessary. Unless it i
 
 - public destructor which is neither deleted nor defaulted. Empty destructors are still counted as user-defined.
 
-## Example
+## Examples
 
 questionable constructor optimization
 
@@ -38,8 +38,6 @@ action::action(std::shared_ptr<transaction> &t) noexcept  // also C26417 LVALUE_
     : transaction_(t)
 {}
 ```
-
-## Example
 
 questionable constructor optimization - simplified
 
