--- a/docs/code-quality/c26417.md
+++ b/docs/code-quality/c26417.md
@@ -31,7 +31,7 @@ Passing shared pointers by reference may be useful in scenarios where callee cod
 
 - any call to a function which accepts a reference to a non-constant shared pointer can potentially reset or reassign that pointer.
 
-## Example
+## Examples
 
 unnecessary interface complication
 
@@ -48,8 +48,6 @@ void renew(std::shared_ptr<event> &e)
     // ...
 }
 ```
-
-## Example
 
 unnecessary interface complication - simplified
 
