--- a/docs/code-quality/c26418.md
+++ b/docs/code-quality/c26418.md
@@ -25,7 +25,7 @@ If shared pointer parameter is passed by value or reference to a constant object
 
 - public destructor which is neither deleted nor defaulted. Empty destructors are still counted as user-defined.
 
-## Example
+## Examples
 
 unnecessary interface complication
 
@@ -36,8 +36,6 @@ std::string to_string(const std::shared_ptr<T> &e) // C26418, also C26415 SMART_
     return !e ? null_string : e->to_string();
 }
 ```
-
-## Example
 
 unnecessary interface complication - simplified
 
