--- a/docs/code-quality/c26426.md
+++ b/docs/code-quality/c26426.md
@@ -25,7 +25,7 @@ The order of execution of initializers for global objects may be inconsistent or
 
 - Static class members are considered global, so their initializers are also checked.
 
-## Example
+## Examples
 
 external version check
 
@@ -40,8 +40,6 @@ int get_api_version() noexcept {
 int get_api_version() noexcept;
 bool is_legacy_mode = get_api_version() <= API_LEGACY_VERSION; // C26426, also stale value
 ```
-
-## Example
 
 external version check – made more reliable
 
