--- a/docs/code-quality/c26800.md
+++ b/docs/code-quality/c26800.md
@@ -13,7 +13,7 @@ ms.author: sunnych
 
 Warning C26800 is triggered when variable is used after it has been moved from. A variable is considered moved from after it was passed to a function as rvalue reference. There are some legitimate exceptions for uses such as assignment, destruction, and some state resetting functions such as std::vector::clear.
 
-## Example
+## Examples
 
 The following code will generate C26800.
 
@@ -39,8 +39,6 @@ void test() {
     use_cref(x1);                // @expected(26800)
 }
 ```
-
-## Example
 
 The following code will not generate C26800.
 
