--- a/docs/code-quality/c6014.md
+++ b/docs/code-quality/c6014.md
@@ -12,7 +12,7 @@ ms.assetid: ef76ec88-74d2-4a3b-b6fe-4b0851ab3372
 
 This warning indicates that the specified pointer points to allocated memory or some other allocated resource that has not been freed. The analyzer checks for this condition only when the `_Analysis_mode_(_Analysis_local_leak_checks_)` SAL annotation is specified. By default, this annotation is specified for Windows kernel mode (driver) code. For more information about SAL annotations, see [Using SAL Annotations to Reduce C/C++ Code Defects](../code-quality/using-sal-annotations-to-reduce-c-cpp-code-defects.md).
 
-## Example
+## Examples
 
 The following code generates this warning:
 
@@ -41,8 +41,6 @@ int main( )
     f();
 }
 ```
-
-## Example
 
 The following code corrects the warning by releasing the memory:
 
