--- a/docs/code-quality/c6053.md
+++ b/docs/code-quality/c6053.md
@@ -14,7 +14,7 @@ This warning indicates that the specified function has been called in such a way
 
 Most C standard library and Win32 string handling functions require and produce zero-terminated strings. A few 'counted string' functions (including `strncpy`, `wcsncpy`, `_mbsncpy`, `_snprintf`, and `snwprintf`) do not produce zero-terminated strings if they exactly fill their buffer. In this case, a subsequent call to a string function that expects a zero-terminated string will go beyond the end of the buffer looking for the zero. The program should make sure that the string ends with a zero. In general, you should pass a length to the 'counted string' function one smaller than the size of the buffer and then explicitly assign zero to the last character in the buffer.
 
-## Example
+## Examples
 
 The following sample code generates this warning:
 
@@ -33,8 +33,6 @@ size_t f( )
 }
 ```
 
-## Example
-
 To correct this warning, zero-terminate the string as shown in the following sample code:
 
 ```cpp
@@ -52,8 +50,6 @@ size_t f( )
   return strlen(szDest);
 }
 ```
-
-## Example
 
 The following sample code corrects this warning using safe string manipulation `strncpy_s` function:
 
