--- a/docs/code-quality/c6329.md
+++ b/docs/code-quality/c6329.md
@@ -12,7 +12,7 @@ ms.assetid: 5765bd4d-5fa1-4e51-82d6-c1837b4743db
 
 The program is comparing a number against the return value from a call to `CreateFile`. If `CreateFile` succeeds, it returns an open handle to the object. If it fails, it returns `INVALID_HANDLE_VALUE`.
 
-## Example
+## Examples
 
 This code could cause the warning:
 
@@ -22,8 +22,6 @@ if (CreateFile() == NULL)
   return;
 }
 ```
-
-## Example
 
 This code corrects the error:
 
