--- a/docs/code-quality/c26100.md
+++ b/docs/code-quality/c26100.md
@@ -12,7 +12,7 @@ ms.assetid: 470ab2b2-5b55-424f-b192-3863a773c892
 
 The `_Guarded_by_` annotation in the code specifies the lock to use to guard a shared variable. Warning C26100 is generated when the guard contract is violated.
 
-## Example
+## Examples
 
 The following example generates warning C26100 because there is a violation of the `_Guarded_by_` contract.
 
@@ -43,8 +43,6 @@ void Unsafe(DATA* p) {
 ```
 
 The contract violation occurs because an incorrect lock is used in the function `Unsafe`. In this case, `gCS` is the correct lock to use.
-
-## Example
 
 Occasionally a shared variable only has to be guarded for write access but not for read access. In that case, use the `_Write_guarded_by_` annotation, as shown in the following example.
 
