1769497, fixed duplicate-descriptions and duplicate-headings. (#3139)

--- a/docs/code-quality/c26439.md
+++ b/docs/code-quality/c26439.md
@@ -5,7 +5,7 @@ ms.topic: "conceptual"
 f1_keywords: ["C26439"]
 helpviewer_keywords: ["C26439"]
 ms.assetid: 9df2a1b0-ea94-4884-9d28-c1522ec33a1b
-description: CppCoreCheck rule that enforces C++ Core Guidelines F.6
+description: CppCoreCheck rule C26439 that enforces C++ Core Guidelines F.6
 ---
 # C26439 SPECIAL_NOEXCEPT
 
