--- a/docs/code-quality/c26440.md
+++ b/docs/code-quality/c26440.md
@@ -5,7 +5,7 @@ ms.topic: "conceptual"
 f1_keywords: ["C26440"]
 helpviewer_keywords: ["C26440"]
 ms.assetid: b6d2b188-35cc-4de2-878c-6f97d5a2444a
-description: CppCoreCheck rule that enforces C++ Core Guidelines F.6
+description: CppCoreCheck rule C26440 that enforces C++ Core Guidelines F.6
 ---
 # C26440 DECLARE_NOEXCEPT
 
