--- a/docs/code-quality/c26463.md
+++ b/docs/code-quality/c26463.md
@@ -4,7 +4,7 @@ ms.date: 03/22/2018
 ms.topic: reference
 f1_keywords: ["C26463"]
 helpviewer_keywords: ["C26463"]
-description: CppCoreCheck placeholder warning for future con.4 enforcement
+description: CppCoreCheck placeholder warning C26463 for future con.4 enforcement
 ---
 # C26463 USE_CONST_FOR_ELEMENTS
 
