--- a/docs/code-quality/c26490.md
+++ b/docs/code-quality/c26490.md
@@ -4,7 +4,7 @@ ms.date: 03/22/2018
 ms.topic: reference
 f1_keywords: ["C26490"]
 helpviewer_keywords: ["C26490"]
-description: CppCoreCheck rule that enforces C++ Core Guidelines Type.1
+description: CppCoreCheck rule C26490 that enforces C++ Core Guidelines Type.1
 ---
 # C26490 NO_REINTERPRET_CAST
 
