--- a/docs/code-quality/c26462.md
+++ b/docs/code-quality/c26462.md
@@ -4,7 +4,7 @@ ms.date: 03/22/2018
 ms.topic: reference
 f1_keywords: ["C26462"]
 helpviewer_keywords: ["C26462"]
-description: CppCoreCheck rule that enforces C++ Core Guidelines Con.4
+description: CppCoreCheck rule C26462 that enforces C++ Core Guidelines Con.4
 ---
 # C26462 USE_CONST_POINTER_FOR_VARIABLE
 
