--- a/docs/code-quality/c26464.md
+++ b/docs/code-quality/c26464.md
@@ -4,7 +4,7 @@ ms.date: 03/22/2018
 ms.topic: reference
 f1_keywords: ["C26464"]
 helpviewer_keywords: ["C26464"]
-description: CppCoreCheck placeholder warning for future con.4 enforcement
+description: CppCoreCheck placeholder warning C26464 for future con.4 enforcement
 ---
 # C26464 USE_CONST_POINTER_FOR_ELEMENTS
 
