--- a/docs/code-quality/c26471.md
+++ b/docs/code-quality/c26471.md
@@ -4,7 +4,7 @@ ms.date: 03/22/2018
 ms.topic: reference
 f1_keywords: ["C26471"]
 helpviewer_keywords: ["C26471"]
-description: CppCoreCheck rule that enforces C++ Core Guidelines Type.1
+description: CppCoreCheck rule C26471 that enforces C++ Core Guidelines Type.1
 ---
 # C26471 NO_REINTERPRET_CAST_FROM_VOID_PTR
 
