--- a/docs/code-quality/c26483.md
+++ b/docs/code-quality/c26483.md
@@ -4,7 +4,7 @@ ms.date: 03/22/2018
 ms.topic: reference
 f1_keywords: ["C26483"]
 helpviewer_keywords: ["C26483"]
-description: CppCoreCheck rule that enforces C++ Core Guidelines Bounds.2
+description: CppCoreCheck rule C26483 that enforces C++ Core Guidelines Bounds.2
 ---
 # C26483 STATIC_INDEX_OUT_OF_RANGE
 
