--- a/docs/code-quality/c26492.md
+++ b/docs/code-quality/c26492.md
@@ -4,7 +4,7 @@ ms.date: 03/22/2018
 ms.topic: reference
 f1_keywords: ["C26492"]
 helpviewer_keywords: ["C26492"]
-description: CppCoreCheck rule that enforces C++ Core Guidelines Type.3
+description: CppCoreCheck rule C26492 that enforces C++ Core Guidelines Type.3
 ---
 # C26492 NO_CONST_CAST
 
