--- a/docs/code-quality/c26496.md
+++ b/docs/code-quality/c26496.md
@@ -4,7 +4,7 @@ ms.date: 03/22/2018
 ms.topic: reference
 f1_keywords: ["C26496"]
 helpviewer_keywords: ["C26496"]
-description: CppCoreCheck rule that enforces C++ Core Guidelines Con.4
+description: CppCoreCheck rule C26496 that enforces C++ Core Guidelines Con.4
 ---
 # C26496 USE_CONST_FOR_VARIABLE
 
