Fix minor mismatch with actual behavior.

--- a/docs/code-quality/c33020.md
+++ b/docs/code-quality/c33020.md
@@ -14,7 +14,7 @@ dev_langs: ["C++"]
 
 > Warning C33020: Likely incorrect HRESULT usage detected.
 
-This is high-confidence warning indicating that HRESULT-returning function returns FALSE or false.
+This is high-confidence warning indicating that HRESULT-returning function returns FALSE.
 
 ## Example
 
