--- a/docs/code-quality/c33022.md
+++ b/docs/code-quality/c33022.md
@@ -14,7 +14,7 @@ dev_langs: ["C++"]
 
 > Warning C33022: Potentially incorrect HRESULT usage detected (low confidence)
 
-This is low-confidence warning for a function that returns HRESULT, if there is "FALSE" or "false"
+This is low-confidence warning for a function that returns HRESULT, if there is "FALSE"
 somewhere along the line that eventually returns it or assigns it to a variable that is returned.
 
 ## Example
