--- a/docs/code-quality/c28230.md
+++ b/docs/code-quality/c28230.md
@@ -1,6 +1,7 @@
 ---
 title: C28230
-ms.date: 11/04/2016
+description: "Understand the causes of Microsoft C/C++ code analysis warning C28230, and learn how to fix them."
+ms.date: 10/23/2020
 ms.topic: reference
 f1_keywords: ["C28230"]
 helpviewer_keywords: ["C28230"]
@@ -24,7 +25,7 @@ struct MyStruct
 };
 
 // Oops, the name of the member is spelled wrong so it will not be found
-void f(_Out_writes_(value.usefulMember) int *buffer, MyStruct value)
+void f(_Out_writes_(value.usefulmember) int *buffer, MyStruct value)
 {
   for(int i = 0 ; i < value.usefulMember; i++)
   {
