Address cpp-docs 2504 missing comment

--- a/docs/code-quality/c6308.md
+++ b/docs/code-quality/c6308.md
@@ -1,6 +1,7 @@
 ---
 title: C6308
-ms.date: 11/04/2016
+description: "Understand the causes of Microsoft C/C++ code analysis warning C6308, and learn how to fix them."
+ms.date: 10/23/2020
 ms.topic: reference
 f1_keywords: ["C6308"]
 helpviewer_keywords: ["C6308"]
@@ -52,6 +53,7 @@ void f()
     {
       x = tmp;
     }
+    // code...
     free(x);
   }
 }
