--- a/docs/code-quality/c26407.md
+++ b/docs/code-quality/c26407.md
@@ -1,5 +1,6 @@
 ---
 title: C26407
+description: "Reference for Visual Studio C++ Core Guidelines code analysis warning C26407."
 ms.date: 08/18/2020
 ms.topic: "conceptual"
 f1_keywords: ["C26407"]
