--- a/docs/code-quality/c26443.md
+++ b/docs/code-quality/c26443.md
@@ -6,12 +6,14 @@ ms.topic: "reference"
 f1_keywords: ["C26443"]
 helpviewer_keywords: ["C26443"]
 dev_langs: ["C++"]
+description: Rule concerning overriding destructors
 ---
-This warning was removed as of Visual Studio 16.8 Preview 4 to reflect [changes to C.128 in the C++ Core Guidelines](https://github.com/isocpp/CppCoreGuidelines/pull/1448).
 
 # C26443 NO_EXPLICIT_DTOR_OVERRIDE
 
 "Overriding destructor should not use explicit 'override' or 'virtual' specifiers."
+
+This warning was removed as of Visual Studio 16.8 Preview 4 to reflect [changes to C.128 in the C++ Core Guidelines](https://github.com/isocpp/CppCoreGuidelines/pull/1448).
 
 ## C++ Core Guidelines
 
