Clarify behavior of C26401 for delete this idiom

--- a/docs/code-quality/c26401.md
+++ b/docs/code-quality/c26401.md
@@ -45,3 +45,24 @@ void function()
     delete pMyStruct; // no warning.
 }
 ```
+
+There is a C++ idiom `delete this` that triggers this warning. The warning is intentional as this pattern is discouraged by the C++ Core Guidelines. The warning can be suppressed using the `gsl::suppress` attribute in such cases. See the example below.
+
+```cpp
+    class MyReferenceCountingObject final
+    {
+    public:
+        void AddRef();
+        void Release() noexcept
+        {
+            ref_count_--;
+            if (ref_count_ == 0)
+            {
+                [[gsl::suppress(i.11)]]
+                delete this; 
+            }
+        }
+    private:
+        unsigned int ref_count_{1};
+    };
+```
