Clarify behavior of C26409 for delete this idiom

--- a/docs/code-quality/c26409.md
+++ b/docs/code-quality/c26409.md
@@ -35,3 +35,24 @@ void f(int i)
     auto unique = std::make_unique<int[]>(i); // prefer using smart pointers over new and delete
 }
 ```
+
+There is a C++ idiom `delete this` that triggers this warning. The warning is intentional as this pattern is discouraged by the C++ Core Guidelines. The warning can be suppressed using the `gsl::suppress` attribute in such cases. See the example below.
+
+```cpp
+    class MyReferenceCountingObject final
+    {
+    public:
+        void AddRef();
+        void Release() noexcept
+        {
+            ref_count_--;
+            if (ref_count_ == 0)
+            {
+                [[gsl::suppress(r.11)]]
+                delete this; 
+            }
+        }
+    private:
+        unsigned int ref_count_{1};
+    };
+```
