--- a/docs/code-quality/c26432.md
+++ b/docs/code-quality/c26432.md
@@ -47,12 +47,12 @@ namespace no_warning
 {
     struct S
     {
-        S() noexcept {}
+        S() noexcept = default;
         S(const S& s) = default;
         S(S&& s) = default;
         S& operator=(const S& s) = default;
         S& operator=(S&& s) = default;
-        ~S() {}
+        ~S() = default;
     };
 }
 ```
