--- a/docs/code-quality/c26497.md
+++ b/docs/code-quality/c26497.md
@@ -24,3 +24,12 @@ void function1() noexcept
     const int theAnswer = GetTheAnswer(0);
 }
 ```
+
+To reduce noise on new code, this warning will not be issued if the function has an empty implementation.
+
+```cpp
+int function1(){  // no C26497
+    return 1;
+}
+void function2(){} // no C26497
+```
