--- a/docs/code-quality/c26497.md
+++ b/docs/code-quality/c26497.md
@@ -8,7 +8,7 @@ description: CppCoreCheck rule that enforces C++ Core Guidelines F.4
 ---
 # C26497 USE_CONSTEXPR_FOR_FUNCTION
 
-This function %function% could be marked `constexpr` if compile-time evaluation is desired (f.4).  
+> This function *function-name* could be marked `constexpr` if compile-time evaluation is desired (f.4).  
 
 ## See also
 
@@ -25,7 +25,7 @@ void function1() noexcept
 }
 ```
 
-To reduce noise on new code, this warning will not be issued if the function has an empty implementation.
+To reduce code analysis noise on new code, this warning isn't issued if the function has an empty implementation.
 
 ```cpp
 int function1(){  // no C26497
