--- a/docs/error-messages/compiler-warnings/c4698.md
+++ b/docs/error-messages/compiler-warnings/c4698.md
@@ -11,13 +11,13 @@ helpviewer_keywords: ["C4698"]
 
 ## Remarks
 
-WinRT APIs that are released for experimentation and feedback are decorated with `Windows.Foundation.Metadata.ExperimentalAttribute`. In Visual Studio 2017 version 15.3, the compiler produces warning C4698 for this attribute. A few APIs in previous versions of the Windows SDK have already been decorated with the attribute, and calls to these APIs now trigger this compiler warning. Newer Windows SDKs have the attribute removed from all shipped types. If you're using an older SDK, you'll need to suppress these warnings for all calls to shipped types.
+WinRT APIs that are released for experimentation and feedback are decorated with the `Windows.Foundation.Metadata.ExperimentalAttribute` attribute. In Visual Studio 2017 version 15.3, the compiler produces warning C4698 for this attribute. A few APIs in previous versions of the Windows SDK have already been decorated with the attribute, and calls to these APIs now trigger this compiler warning. Newer Windows SDKs have the attribute removed from all shipped types. If you're using an older SDK, you'll need to suppress these warnings for all calls to shipped types.
 
 ### To turn off the warning without code changes
 
 For information on how to disable warnings introduced in a particular compiler version or later, see [Compiler warnings by compiler version](compiler-warnings-by-compiler-version.md).
 
-You can turn off the warning for a specific line of code by using the [warning](../../preprocessor/warning.md) pragma, `#pragma warning(suppress : 4698)`. You can also turn off the warning within a file by using the warning pragma, `#pragma warning(disable : 4698)`. You can turn off the warning globally in command-line builds by using the **`/wd4698`** command-line option.
+You can turn off the warning for a specific line of code by using the [`warning`](../../preprocessor/warning.md) pragma, `#pragma warning(suppress : 4698)`. You can also turn off the warning within a file by using the warning pragma, `#pragma warning(disable : 4698)`. You can turn off the warning globally in command-line builds by using the **`/wd4698`** command-line option.
 
 To turn off the warning for an entire project in the Visual Studio IDE:
 
