--- a/docs/error-messages/compiler-warnings/c4841.md
+++ b/docs/error-messages/compiler-warnings/c4841.md
@@ -17,7 +17,7 @@ This warning is new in Visual Studio 2017 version 15.3, and is off by default. U
 
 ## Example
 
-The following code is ill-formed and could potentially cause a crash at runtime. Visual Studio 2017 version 15.3 produces warning C4841:
+The following code is ill-formed and could potentially cause a crash at runtime:
 
 ```cpp
 struct A {
