Found a few more.

--- a/docs/error-messages/compiler-warnings/c5050.md
+++ b/docs/error-messages/compiler-warnings/c5050.md
@@ -33,7 +33,7 @@ The compiler raises C5050 for both of these cases:
 ```cmd
 warning C5050: Possible incompatible environment while
 importing module 'm': mismatched C++ versions.
-Current "201402" module version "201703"`.
+Current "201402" module version "201703".
 ```
 
 To resolve the issue, use the same compiler command line options for both the module and the consuming code.
