fix link, style edits

--- a/docs/code-quality/c6389.md
+++ b/docs/code-quality/c6389.md
@@ -8,13 +8,14 @@ helpviewer_keywords: ["C6389"]
 
 # C6389: MARK_INTERNAL_OR_MISSING_COMMON_DECL
 
-This check intended to help with reducing the visibility of certain symbols and modularize the code. In multi-file C++ projects each declaration should be either local to a C++ file (part of the anonymous namespace) or declared in a common header file that is included by multiple C++ files.
+This check is intended to help reduce the visibility of certain symbols and to modularize the code. In multi-file C++ projects, each declaration should be either local to a C++ file (part of the anonymous namespace) or declared in a common header file that's included by multiple C++ files.
 
-When this check flags a declaration, either it should be moved to an anonymous namespace or a forward declaration should be moved to a header file depending on the scope of the symbol.
+When this check flags a declaration, either it should be moved to an anonymous namespace or a forward declaration should be moved to a header file, depending on the scope of the symbol.
 
-This is an experimental rule that needs to be enabled in a ruleset file explicitly to work. More information about rulesets can be found [here](https://docs.microsoft.com/en-us/visualstudio/code-quality/using-rule-sets-to-group-code-analysis-rules).
+The rule is an experimental rule that must be explicitly enabled in a rule set file to work. For more information about rule sets, see [Use rule sets to group code analysis rules](/visualstudio/code-quality/using-rule-sets-to-group-code-analysis-rules).
 
 ## Example
+
 ```cpp
 // A.h
 struct X;
@@ -28,7 +29,9 @@ struct Y { double y; }; // warning: Move 'Y' to anonymous namespace or put a for
 
 void f();  // warning: Move 'Y' to anonymous namespace or put a forward declaration in a common header included in this file.
 ```
+
 To resolve this issue:
+
 ```cpp
 // A.h
 struct X;
