--- a/docs/code-quality/c6389.md
+++ b/docs/code-quality/c6389.md
@@ -19,25 +19,31 @@ The rule is an experimental rule that must be explicitly enabled in a rule set f
 ```cpp
 // A.h
 struct X;
+```
 
+```
 // A.cpp
+#include "A.h"
 
 // Not flagged, declared in a header file.
 struct X { int x; };
 
 struct Y { double y; }; // warning: Move 'Y' to anonymous namespace or put a forward declaration in a common header included in this file.
 
-void f();  // warning: Move 'Y' to anonymous namespace or put a forward declaration in a common header included in this file.
+void f();  // warning: Move 'f' to anonymous namespace or put a forward declaration in a common header included in this file.
 ```
 
-To resolve this issue:
+One way to resolve these issues is to move `struct Y` into an anonymous namespace, and move the declaration of `f` into a header:
 
 ```cpp
 // A.h
 struct X;
 void f();
+```
 
+```cpp
 // A.cpp
+#include "A.h"
 
 // Not flagged, declared in a header file.
 struct X { int x; };
@@ -48,5 +54,4 @@ namespace {
 
 // Not flagged, declared in a header file.
 void f(); 
-
 ```
