Fix code block tag

--- a/docs/code-quality/c6389.md
+++ b/docs/code-quality/c6389.md
@@ -21,7 +21,7 @@ The rule is an experimental rule that must be explicitly enabled in a rule set f
 struct X;
 ```
 
-```
+```cpp
 // A.cpp
 #include "A.h"
 
