Address 3269 typo in warning number (#3680)

--- a/docs/error-messages/compiler-warnings/c4834.md
+++ b/docs/error-messages/compiler-warnings/c4834.md
@@ -1,7 +1,7 @@
 ---
 description: "Learn about the cause and fixes for Compiler warning (level 1) C4834."
 title: "Compiler warning (Level 1) C4834"
-ms.date: 04/18/2021
+ms.date: 07/26/2021
 f1_keywords: ["C4834"]
 helpviewer_keywords: ["C4834"]
 ---
@@ -19,13 +19,13 @@ This warning was introduced in Visual Studio 2017 version 15.3 as a level 3 warn
 
 ### To turn off the warning without code changes
 
-You can turn off the warning for a specific line of code by using the [warning](../../preprocessor/warning.md) pragma, `#pragma warning(suppress : 4034)`. You can also turn off the warning within a file by using the warning pragma, `#pragma warning(disable : 4034)`. You can turn off the warning globally in command-line builds by using the **`/wd4034`** command-line option.
+You can turn off the warning for a specific line of code by using the [`warning`](../../preprocessor/warning.md) pragma, `#pragma warning(suppress : 4834)`. You can also turn off the warning within a file by using the warning pragma, `#pragma warning(disable : 4834)`. You can turn off the warning globally in command-line builds by using the **`/wd4834`** command-line option.
 
 To turn off the warning for an entire project in the Visual Studio IDE:
 
 1. Open the **Property Pages** dialog for your project. For information on how to use the Property Pages dialog, see [Property Pages](../../build/reference/property-pages-visual-cpp.md).
 1. Select the **Configuration Properties** > **C/C++** > **Advanced** page.
-1. Edit the **Disable Specific Warnings** property to add *`4034`*. Choose **OK** to apply your changes.
+1. Edit the **Disable Specific Warnings** property to add *`4834`*. Choose **OK** to apply your changes.
 
 ## Example
 
