Markdown quality fixes 6 of N

--- a/docs/code-quality/c6031.md
+++ b/docs/code-quality/c6031.md
@@ -83,7 +83,7 @@ void test_f()
 }
 ```
 
-In cases where it is necessary to ignore the return value of a function, assign the returned value to `std::ignore`. Assigning to `std::ignore` clearly indicates developer intent and helps in future code maintenance. 
+In cases where it is necessary to ignore the return value of a function, assign the returned value to `std::ignore`. Assigning to `std::ignore` clearly indicates developer intent and helps in future code maintenance.
 
 ```cpp
 #include <tuple>
@@ -99,5 +99,5 @@ void f()
 
 ## See also
 
-[fopen_s, _wfopen_s](../c-runtime-library/reference/fopen-s-wfopen-s.md)\
+[`fopen_s`, `_wfopen_s`](../c-runtime-library/reference/fopen-s-wfopen-s.md)\
 [Using SAL Annotations to reduce code defects](using-sal-annotations-to-reduce-c-cpp-code-defects.md)
