--- a/docs/error-messages/compiler-warnings/c5208.md
+++ b/docs/error-messages/compiler-warnings/c5208.md
@@ -19,11 +19,11 @@ Unnamed classes within a **`typedef`** declaration can't have any members other 
 
 The same restrictions are applied recursively to each nested class. The restriction is meant to ensure the simplicity of structs that have **`typedef`** names for linkage purposes. They must be simple enough that no linkage calculations are necessary before the compiler gets to the **`typedef`** name for linkage.
 
-This warning is new in Visual Studio 2019 version 16.6. Based on [P1766R1](https://wg21.link/P1766R1) adopted by the C++ standards committee as a defect report, it affects all standards modes of the compiler. In default **`/std:c++14`** and  **`/std:c++17`** modes, the compiler emits warning C5208 for non-conforming code. If **`/permissive-`** is specified, the compiler emits warning C5208 as an error under **`/std:c++14`** and emits error C7626 under **`/std:c++17`**. The compiler emits error C7626 for non-conforming code when **`/std:c++latest`** is specified.
+This warning is new in Visual Studio 2019 version 16.6. Based on [P1766R1](https://wg21.link/P1766R1) adopted by the C++ standards committee as a defect report, it affects all standards modes of the compiler. In default **`/std:c++14`** and  **`/std:c++17`** modes, the compiler emits warning C5208 for non-conforming code. If **`/permissive-`** is specified, the compiler emits warning C5208 as an error under **`/std:c++14`**. The compiler emits error C7626 for non-conforming code when **`/std:c++17`** or later is specified.
 
 ### To turn off the warning without code changes
 
-You can turn off the warning for a specific line of code by using the [warning](../../preprocessor/warning.md) pragma, `#pragma warning(suppress : 5208)`. You can also turn off the warning within a file by using the warning pragma, `#pragma warning(disable : 5208)`. You can turn off the warning globally in command-line builds by using the **/wd5208** command-line option.
+You can turn off the warning for a specific line of code by using the [`warning`](../../preprocessor/warning.md) pragma, `#pragma warning(suppress : 5208)`. You can also turn off the warning within a file by using the warning pragma, `#pragma warning(disable : 5208)`. You can turn off the warning globally in command-line builds by using the **/wd5208** command-line option.
 
 To turn off the warning for an entire project in the Visual Studio IDE:
 
