Cleanup per review

--- a/docs/code-quality/c26443.md
+++ b/docs/code-quality/c26443.md
@@ -13,7 +13,7 @@ description: Rule concerning overriding destructors
 
 "Overriding destructor should not use explicit 'override' or 'virtual' specifiers."
 
-This warning was removed as of Visual Studio 16.8 Preview 4 to reflect [changes to C.128 in the C++ Core Guidelines](https://github.com/isocpp/CppCoreGuidelines/pull/1448).
+This warning was removed in Visual Studio 16.8 to reflect [changes to C.128 in the C++ Core Guidelines](https://github.com/isocpp/CppCoreGuidelines/pull/1448).
 
 ## C++ Core Guidelines
 
