Include link update

--- a/docs/error-messages/compiler-warnings/c5033.md
+++ b/docs/error-messages/compiler-warnings/c5033.md
@@ -15,7 +15,7 @@ Certain storage class keywords have been deprecated or removed from the C++ lang
 
 **Visual Studio 2010 and later:** In C++11, the **`auto`** keyword is no longer a C++ storage-class specifier, and the **`register`** keyword is deprecated.
 
-**Visual Studio 2017 version 15.7 and later:** (available in [`/std:c++17`](../build/reference/std-specify-language-standard-version.md) mode and later): The **`register`** keyword is removed from the C++ language in C++17 and later standards.
+**Visual Studio 2017 version 15.7 and later:** (available in [`/std:c++17`](../../build/reference/std-specify-language-standard-version.md) mode and later): The **`register`** keyword is removed from the C++ language in C++17 and later standards.
 
 The C++ standard defines an original and a revised meaning for the **`auto`** keyword. Before C++11, the **`auto`** keyword declares a variable in the *automatic* storage class; that is, a variable that has a local lifetime. Starting in C++11, the **`auto`** keyword declares a variable whose type is deduced from the initialization expression in its declaration. For backward compatibility, you can use the [`/Zc:auto`](../../build/reference/zc-auto-deduce-variable-type.md) compiler option to control the meaning of the **`auto`** keyword.
 
