--- a/docs/error-messages/compiler-warnings/c5033.md
+++ b/docs/error-messages/compiler-warnings/c5033.md
@@ -1,15 +1,15 @@
 ---
-title: "Compiler Warning C5033"
+title: "Compiler warning C5033"
 description: Describes the causes and fixes for compiler warning C5033.
 ms.date: 05/03/2021
 f1_keywords: ["C5033"]
 helpviewer_keywords: ["C5033"]
 ---
-# Compiler Warning (Level 1) C5033
+# Compiler warning (level 1) C5033
 
 > '*storage-class-keyword*' is no longer a supported storage class
 
-Certain storage class keywords have been deprecated or removed from the C++ language.
+The  **`auto`** and **`register`** storage class keywords have been deprecated or removed from the C++ language.
 
 ## Remarks
 
