Correct or remove links: validation issues

--- a/docs/code-quality/c6236.md
+++ b/docs/code-quality/c6236.md
@@ -57,4 +57,4 @@ void f( int n )
 
 ## See also
 
-[C++ Bitwise Operators](https://www.microsoft.com/download/details.aspx?id=55979)
+[Bitwise AND operator: `&`](../cpp/bitwise-and-operator-amp.md)
