--- a/docs/code-quality/c26826.md
+++ b/docs/code-quality/c26826.md
@@ -9,9 +9,13 @@ helpviewer_keywords: ["C26826"]
 
 > Don't use C-style variable arguments (f.55).
 
-For more information, see [F.55: Don't use `va_arg` arguments](https://github.com/isocpp/CppCoreGuidelines/blob/master/CppCoreGuidelines.md#f55-dont-use-va_arg-arguments) in the C++ Core Guidelines.
+For more information, see [F.55: Don't use `va_arg` arguments](http://isocpp.github.io/CppCoreGuidelines/CppCoreGuidelines#F-varargs) in the C++ Core Guidelines.
 
-This check warns on all usages of `va_list`, `va_start`, `va_arg`, and `va_end`, discouraging the use of C-style variable arguments. C-style variable arguments are unsafe because they require the programmer to assume that the arguments are all passed / read with the correct types.
+## Remarks
+
+This check warns on all usages of `va_list`, `va_start`, `va_arg`, and `va_end`, discouraging the use of C-style variable arguments. C-style variable arguments are unsafe because they require the programmer to assume that the arguments are all passed and read with the correct types.
+
+Warning C26826 is available starting in Visual Studio 2022 version 17.1.
 
 ## Example
 
@@ -41,4 +45,3 @@ Alternatives to C-style variable arguments include:
 - variadic templates
 - `std::variant` arguments
 - `std::initializer_list`
-
