Switch http to https and fix broken links

--- a/docs/code-quality/c26826.md
+++ b/docs/code-quality/c26826.md
@@ -9,7 +9,7 @@ helpviewer_keywords: ["C26826"]
 
 > Don't use C-style variable arguments (f.55).
 
-For more information, see [F.55: Don't use `va_arg` arguments](http://isocpp.github.io/CppCoreGuidelines/CppCoreGuidelines#F-varargs) in the C++ Core Guidelines.
+For more information, see [F.55: Don't use `va_arg` arguments](https://isocpp.github.io/CppCoreGuidelines/CppCoreGuidelines#F-varargs) in the C++ Core Guidelines.
 
 ## Remarks
 
