Bulk fix: Pipe entity 3 of n

--- a/docs/code-quality/c6288.md
+++ b/docs/code-quality/c6288.md
@@ -9,7 +9,7 @@ ms.assetid: 3856b80a-c9f2-4e86-97fc-c913b0186788
 ---
 # C6288
 
-> warning C6288: Incorrect operator: mutual inclusion over && is always zero. Did you intent to use &#124;&#124; instead?
+> warning C6288: Incorrect operator: mutual inclusion over && is always zero. Did you intent to use \|\| instead?
 
 This warning indicates that in a test expression, a variable is being tested against two different constants and the result depends on both conditions being true. The code in these cases indicates that the programmer's intent is not captured correctly. It is important to examine the code and correct the problem; otherwise your code will not behave the way you expected it to.
 
