--- a/docs/code-quality/c26813.md
+++ b/docs/code-quality/c26813.md
@@ -1,18 +1,16 @@
 ---
 description: "Learn more about: C26813"
 title: c26813
-keywords: c26813
-ms.date: 02/23/2022
+ms.date: 03/02/2022
 ms.topic: reference
 f1_keywords: ["C26813"]
 helpviewer_keywords: ["C26813"]
-dev_langs: ["C++"]
 ---
 # C26813
 
 > Warning C26813: Use 'bitwise and' to check if a flag is set
 
-Most `enum`s with power of two member values are intended to be used with bit flags. As a result, we rarely want to equality compare these flags. We want to extract the bits we are interested in using bitwise operations instead.
+Most `enum` types with power of two member values are intended to be used as bit flags. As a result, you rarely want to compare these flags for equality. Instead, extract the bits you're interested in by using bitwise operations.
 
 ## Example
 
@@ -41,8 +39,7 @@ void useEqualsWithBitwiseEnum(BitWise a)
 }
 ```
 
-
 ## See also
 
-[C26827](./c26827.md)
+[C26827](./c26827.md)\
 [C26828](./c26828.md)
