--- a/docs/code-quality/c26827.md
+++ b/docs/code-quality/c26827.md
@@ -1,18 +1,16 @@
 ---
 description: "Learn more about: C26827"
 title: c26827
-keywords: c26814
-ms.date: 02/23/2022
+ms.date: 03/02/2022
 ms.topic: reference
 f1_keywords: ["C26827"]
 helpviewer_keywords: ["C26827"]
-dev_langs: ["C++"]
 ---
 # C26827
 
-> Warning C26827: Did you forgot to initialize an enum or wanted to use another type? 
+> Warning C26827: Did you forget to initialize an enum, or intend to use another type?
 
-Most `enum` types used in bitwise operations are expected to have members with values of powers of two. This warning attempts to find cases where we forgot to give a value to an enum constant explicitly or inadvertently used the wrong enum type.
+Most `enum` types used in bitwise operations are expected to have members with values of powers of two. This warning attempts to find cases where a value wasn't given explicitly to an enumeration constant. It also finds cases where the wrong enumeration type may have been used inadvertently.
 
 ## Example
 
@@ -27,11 +25,11 @@ enum class AlmostBitWise
 
 int almostBitwiseEnums(AlmostBitWise a, bool cond) 
 {
-    return (int)a|(int)AlmostBitWise::A; // Warning C26827: Did you forgot to initialize an enum or wanted to use another type?
+    return (int)a|(int)AlmostBitWise::A; // Warning C26827: Did you forget to initialize an enum, or intend to use another type?
 }
 ```
 
-To fix the warning, initialize the enum constant to the correct value or use the correct enum type in the operation.
+To fix the warning, initialize the enumeration constant to the correct value, or use the correct enumeration type in the operation.
 
 ```cpp
 enum class AlmostBitWise
@@ -50,5 +48,5 @@ int almostBitwiseEnums(AlmostBitWise a, bool cond)
 
 ## See also
 
-[C26813](./c26813.md)
+[C26813](./c26813.md)\
 [C26828](./c26828.md)
