--- a/docs/code-quality/c26828.md
+++ b/docs/code-quality/c26828.md
@@ -1,18 +1,16 @@
 ---
 description: "Learn more about: C26828"
 title: c26828
-keywords: c26828
-ms.date: 02/23/2022
+ms.date: 03/02/2022
 ms.topic: reference
 f1_keywords: ["C26828"]
 helpviewer_keywords: ["C26828"]
-dev_langs: ["C++"]
 ---
 # C26828
 
 > Warning C26828: Different enum types have overlapping values. Did you want to use another enum constant here?
 
-Most of the times we use a single enum to describe all the bit flags we can use for an option. If we use two different enum types in the same bitwise expression where the enums have overlapping values the chances are good those enums were not designed to be used in the expression.
+Most of the time, a single enumeration type describes all the bit flags that you can use for an option. If you use two different enumeration types that have overlapping values in the same bitwise expression, the chances are good those enumeration types weren't designed for use together.
 
 ## Example
 
@@ -39,7 +37,7 @@ int overlappingBitwiseEnums(BitWiseA a)
 }
 ```
 
-To fix the warning make sure `enum`s that are designed to be used together have no overlapping values or make sure all the related options are in a single `enum`.
+To fix the warning. make sure enumeration types designed for use together have no overlapping values. Or, make sure all the related options are in a single enumeration type.
 
 ```cpp
 
@@ -58,6 +56,5 @@ int overlappingBitwiseEnums(BitWiseA a)
 
 ## See also
 
-[C26813](./c26813.md)
+[C26813](./c26813.md)\
 [C26827](./c26827.md)
-
