--- a/docs/code-quality/c26828.md
+++ b/docs/code-quality/c26828.md
@@ -37,7 +37,7 @@ int overlappingBitwiseEnums(BitWiseA a)
 }
 ```
 
-To fix the warning. make sure enumeration types designed for use together have no overlapping values. Or, make sure all the related options are in a single enumeration type.
+To fix the warning, make sure enumeration types designed for use together have no overlapping values. Or, make sure all the related options are in a single enumeration type.
 
 ```cpp
 
