Edits to improve SEO and usability

--- a/docs/code-quality/c26477.md
+++ b/docs/code-quality/c26477.md
@@ -1,13 +1,14 @@
 ---
-description: "Learn more about: C26477 USE_NULLPTR_NOT_CONSTANT"
-title: C26477
+description: "Learn more about the C26477 USE_NULLPTR_NOT_CONSTANT C++ Core Guidelines Checker warning. The nullptr value allows overloads with special null handling."
+title: C26477 USE_NULLPTR_NOT_CONSTANT
 ms.date: 12/14/2018
-ms.topic: "conceptual"
+ms.topic: reference
 f1_keywords: ["C26477"]
 helpviewer_keywords: ["C26477"]
 ms.assetid: d5395efc-5eb2-4e82-9b45-fcd5ff4577bf
 author: kylereedmsft
 ms.author: kylereed
+ms.custom: kr2b-contr-experiment
 ---
 # C26477 USE_NULLPTR_NOT_CONSTANT
 
