--- a/docs/code-quality/c26486.md
+++ b/docs/code-quality/c26486.md
@@ -1,13 +1,14 @@
 ---
-description: "Learn more about: C26486 LIFETIMES_FUNCTION_PRECONDITION_VIOLATION"
-title: C26486
+description: "Learn more about the C26486 LIFETIMES_FUNCTION_PRECONDITION_VIOLATION C++ Core Guidelines Checker warning. Don't pass an invalid pointer as a parameter."
+title: C26486 LIFETIMES_FUNCTION_PRECONDITION_VIOLATION
 ms.date: 12/14/2018
-ms.topic: "conceptual"
+ms.topic: reference
 f1_keywords: ["C26486"]
 helpviewer_keywords: ["C26486"]
 ms.assetid: d5395efc-5eb2-4e82-9b45-fcd5ff4577bf
 author: kylereedmsft
 ms.author: kylereed
+ms.custom: kr2b-contr-experiment
 ---
 # C26486 LIFETIMES_FUNCTION_PRECONDITION_VIOLATION
 
