--- a/docs/code-quality/c26456.md
+++ b/docs/code-quality/c26456.md
@@ -1,13 +1,14 @@
 ---
-description: "Learn more about: C26456 DONT_HIDE_OPERATORS"
-title: C26456
+description: "Learn more about the C26456 DONT_HIDE_OPERATORS C++ Core Guidelines Checker warning. Hiding base methods is error prone and makes code harder to read."
+title: C26456 DONT_HIDE_OPERATORS
 ms.date: 12/14/2018
-ms.topic: "conceptual"
+ms.topic: reference
 f1_keywords: ["C26456"]
 helpviewer_keywords: ["C26456"]
 ms.assetid: 3a3ad636-0938-40b5-93ce-169322e2ff23
 author: kylereedmsft
 ms.author: kylereed
+ms.custom: kr2b-contr-experiment
 ---
 # C26456 DONT_HIDE_OPERATORS
 
