--- a/docs/code-quality/c26495.md
+++ b/docs/code-quality/c26495.md
@@ -1,6 +1,6 @@
 ---
 title: C26495
-ms.date: 03/22/2018
+ms.date: 05/23/2022
 ms.topic: reference
 f1_keywords: ["C26495"]
 helpviewer_keywords: ["C26495"]
@@ -8,11 +8,11 @@ description: CppCoreCheck rule that enforces C++ Core Guidelines Type.6
 ---
 # C26495 MEMBER_UNINIT
 
-Variable '%variable%' is uninitialized. Always initialize a member variable (type.6).
+> Variable '*identifier*' is uninitialized. Always initialize a member variable (type.6).
 
-## See also
+## Remarks
 
-C++ Core Guidelines [Type.6](https://github.com/isocpp/CppCoreGuidelines/blob/master/CppCoreGuidelines.md#SS-type) and [C.48](https://github.com/isocpp/CppCoreGuidelines/blob/master/CppCoreGuidelines.md#c48-prefer-in-class-initializers-to-member-initializers-in-constructors-for-constant-initializers)
+A member variable isn't initialized by a constructor or by an initializer. Make sure all variables are initialized by the end of construction. For more information, see C++ Core Guidelines [Type.6](https://github.com/isocpp/CppCoreGuidelines/blob/master/CppCoreGuidelines.md#SS-type) and [C.48](https://github.com/isocpp/CppCoreGuidelines/blob/master/CppCoreGuidelines.md#c48-prefer-in-class-initializers-to-member-initializers-in-constructors-for-constant-initializers).
 
 ## Example
 
@@ -20,16 +20,16 @@ C++ Core Guidelines [Type.6](https://github.com/isocpp/CppCoreGuidelines/blob/ma
 struct MyStruct
 {
     int value;
-    MyStruct() {}; // C26495, MyStruct::value is uninitialized
+    MyStruct() {} // C26495, MyStruct::value is uninitialized
 };
 ```
 
-To fix the warning, add in-class initializers to all of the member variables. See the above linked C++ Core Guidelines pages for additional information.
+To fix the warning, add in-class initialization to all of the member variables:
 
 ```cpp
 struct MyStruct
 {
     int value{};
-    MyStruct() {}; // no warning, MyStruct::value is set via default member initialization
+    MyStruct() {} // no warning, MyStruct::value is set via default member initialization
 };
 ```
